--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,16 @@
         "fideloper/proxy": "^4.0",
         "jansenfelipe/faker-br": "^1.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0",
+        "sven/artisan-view": "^3.1"
     },
     "autoload": {
         "classmap": [
